Added repo link to demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
 		<div class="body-inner">
 			<header>
 				<h1>No Scroll Demo</h1>
+				<p><a href="https://github.com/alexspirgel/no-scroll">View the GitHub repository</a></p>
 			</header>
 			<main>
 				<h2>Body</h2>
